# local-code-browser

./: .gitignore  CONFIG.md  Cargo.toml  LICENSE  Makefile  README.md  test-detection.rs
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: analyzers.rs  config.rs  db.rs  detect.rs  lib.rs  scan.rs  vcs.rs
crates/indexer/tests/: basic.rs
crates/version-manager/: Cargo.toml
crates/version-manager/src/: main.rs
scripts/: qa.sh  release.sh
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: main.tsx
web/src/ui/: App.tsx
