[package]
name = "app"
version = "0.1.2"
edition = "2021"

[features]
git = ["indexer/git"]
analyzers = ["indexer/analyzers"]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indexer = { path = "../crates/indexer" }
shellexpand = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
base64 = "0.22"
