[package]
name = "cli"
version = "0.1.10"
edition = "2021"

[features]
git = ["indexer/git"]
analyzers = ["indexer/analyzers"]

[dependencies]
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
directories = { workspace = true }
indexer = { path = "../indexer" }
shellexpand = { workspace = true }
