[package]
name = "indexer"
version = "0.1.6"
edition = "2021"

[features]
git = ["git2"]
analyzers = ["tokei"]

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
directories = { workspace = true }
ignore = "0.4"
walkdir = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
time = { version = "0.3", features = ["formatting","macros"] }
shellexpand = { workspace = true }
dirs-next = "2"

# Optional git support
git2 = { version = "0.18", optional = true }

# Optional analyzers
tokei = { version = "12", optional = true }

[dev-dependencies]
tempfile = "3"
